--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>
             <ul><a href="*">Home</a></ul>
             <ul><a href="*">About Us</a></ul>
-            <ul><a href="*">Courses</a></ul>
+            <ul class="courses"><a href="*">Courses</a></ul>
             <ul><a href="*">Our Teachers</a></ul>
             <ul><a href="*">FAQ</a></ul>
         </li>
@@ -22,7 +22,15 @@
     <!-----------Main Section-------------->
     <div class="main">
         <div class="first">
-            <h1>Welcome to Preschool</h1>
+            <h1>Welcome to <br> Preschool</h1>
+            <div class="buttons">
+                <div class="white">
+                    Learn More
+                </div>
+                <div class="pink">
+                    Let's Go!
+                </div>
+            </div>
         </div>
 
         <div class="second">
